# glchat-sdk

./: .gitignore  .pre-commit-config.yaml  PIPELINE.md  README.md  VERSIONING.md  build.ci.env  catalog-info-js.yaml  catalog-info-python.yaml  cloudbuild-pr.yml  cloudbuild.yml  docker-compose.gcb.yml  sonar-project.properties
.ci/: shared.sh  update_pyproject.py  update_whl.py
.github/workflows/: build-binary.yml  pr-agent.yml
cloudbuild-terraform/: .terraform.lock.hcl  README.md  js.tf  libs.tf  locals.tf  main.tf  python.tf  terragrunt.hcl
gllm_plugin/: supported_models.py
js/: build.ci.env  build.ci.sh  publish.sh  shared.sh
js/glchat-js/: .npmignore  README.md  eslint.config.mjs  gdplabs-glchat-js-0.0.1-b1.tgz  package-lock.json  package.json  sonar-project.properties  vitest.config.ts
js/glchat-js/examples/bun/: basic.ts  file.ts
js/glchat-js/examples/node/: file.ts
js/glchat-js/src/: config.ts
js/glchat-js/src/api/: fetch.test.ts  fetch.ts
js/glchat-js/src/api/message/: handler.ts
js/glchat-sdk/: .editorconfig  .npmignore  CONTRIBUTING.md  LICENSE  README.md  env.d.ts  package-lock.json  package.json  sonar-project.properties  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.setup.ts
js/glchat-sdk/examples/bun/: file.ts  tsconfig.json
js/glchat-sdk/examples/bun/message/: basic.ts  file.ts
js/glchat-sdk/examples/bun/pipeline/: register.ts  unregister.ts
js/glchat-sdk/examples/deno/: basic.ts  deno.json  file.ts
js/glchat-sdk/examples/deno/message/: basic.ts  file.ts
js/glchat-sdk/examples/deno/pipeline/: register.ts  unregister.ts
js/glchat-sdk/examples/node/: file.ts  pipeline.ts
js/glchat-sdk/examples/node/message/: basic.ts  file.ts
js/glchat-sdk/examples/node/pipeline/: register.ts
js/glchat-sdk/src/: client.test.ts  client.ts  config.ts  error.ts  index.ts
js/glchat-sdk/src/api/: fetch.test.ts  fetch.ts  lib.test.ts  lib.ts  types.ts
js/glchat-sdk/src/api/message/: handler.test.ts  handler.ts  types.ts
js/glchat-sdk/src/api/pipeline/: handler.test.ts  handler.ts  types.ts
js/glchat-sdk/src/mocks/: server.ts
libs/: build.ci.env  build.ci.sh  build.local.sh  publish.sh  shared.sh
libs/glchat-js/: README.md  eslint.config.mjs  haha.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.mjs
libs/glchat-js/examples/node/: basic.ts  file.ts
libs/glchat-js/src/: client.test.ts  client.ts  config.test.ts  config.ts  index.ts
libs/glchat-js/src/api/: fetch.ts  lib.ts
libs/glchat-js/src/api/message/: handler.test.ts  handler.ts  types.ts
libs/glchat-node/: package.json
libs/glchat-python/: README.md  pyproject.toml  ruff.toml
libs/glchat-python/src/glchat_python/: __init__.py  client.py  responses.py
libs/glchat-python/tests/: test_client.py
libs/gllm-agents/: pyproject.toml
libs/gllm-agents/gllm_agents/: __init__.py
libs/gllm-agents/gllm_agents/plugins/: __init__.py  decorators.py  plugin.py  tool_handler.py
libs/gllm-plugin/: PIPELINE.md  PIPELINE_COMPONENTS.md  README.md  build.ci.sh  pyproject.toml  setup.py  sonar-project.properties
libs/gllm-plugin/gllm_plugin/: __init__.py  supported_models.py
libs/gllm-plugin/gllm_plugin/config/: __init__.py  constant.py
libs/gllm-plugin/gllm_plugin/pipeline/: __init__.py  base_pipeline_preset_config.py  pipeline_handler.py  pipeline_plugin.py
libs/gllm-plugin/gllm_plugin/service/: base_user_service.py
libs/gllm-plugin/gllm_plugin/storage/: __init__.py  anonymizer_storage.py  base_anonymizer_storage.py  base_chat_history_storage.py  chat_history_storage.py
libs/gllm-plugin/gllm_plugin/tools/: __init__.py  decorators.py  plugin.py  tool_handler.py  tool_plugin.py
libs/gllm-plugin/gllm_plugin/utils/: get_lm_invoker.py  logger.py
libs/gllm-plugin/tests/unit/: test_pipeline_handler.py  test_pipeline_plugin.py  test_supported_models.py
libs/gllm-plugin/tests/unit/tools/: test_decorators.py  test_tool_handler.py  test_tool_plugin.py
libs/gllm-plugin/tests/unit/utils/: test_logger.py
python/: build.ci.env  build.ci.sh  publish.sh  shared.sh
python/glchat-plugin/: .trivyignore  PIPELINE.md  README.md  pyproject.toml  sonar-project.properties
python/glchat-plugin/glchat_plugin/constants/: __init__.py  constants.py
python/glchat-plugin/glchat_plugin/pipeline/: pipeline_handler.py
python/glchat-plugin/glchat_plugin/service/: base_rate_limiter_service.py  base_tenant_service.py  base_user_service.py
python/glchat-plugin/glchat_plugin/utils/: __init__.py  get_catalog.py  get_lm_invoker.py
python/glchat-plugin/tests/unit/: test_pipeline_handler.py  test_pipeline_plugin.py
python/glchat-plugin/tests/unit/tools/: __init__.py  test_decorators.py
python/glchat-python/: .gitignore  README.md  pyproject.toml
python/glchat-python/glchat_python/: __init__.py  client.py  message.py
python/glchat-python/tests/: test_client.py
python/glchat-sdk/: CONTRIBUTING.md  README.md  pyproject.toml  sonar-project.properties
python/glchat-sdk/glchat_sdk/: __init__.py  client.py  conversation.py  message.py  models.py  pipeline.py
python/glchat-sdk/tests/: test_client.py  test_conversation.py
templates/: README.md
templates/basic-pipeline-template/: copier.yml
templates/basic-pipeline-template/{{pipeline_slug}}/: .env.example.jinja  __init__.py.jinja  config.yaml.jinja  pipeline.py.jinja  preset_config.py.jinja  state.py.jinja
tests/unit/: test_pipeline_plugin.py
