[tool.poetry]
name = "gllm-plugin"
# NOTE: CICD pipeline uses git tag name as package version. Read VERSIONING.md.
version = "0.0.7"
description = ""
authors = ["GenAI SDK Team <gat-sdk@gdplabs.id>"]
readme = "README.md"
packages = [{include = "gllm_plugin"}]
include = [
  "*.bin",                           # In case you have a Linux/MacOS CLI executable
  "*.exe",                           # In case you have a Windows CLI executable
  "*.pyd",                           # The compiled binary extension for Windows
  "*.so",                            # The compiled binary extension for Linux/MacOS
  "*.pyi",                           # Python interface stub files (aids autocomplete, interface inspection)
  "gllm_plugin/**/*.pyi",            # Python interface stub files (aids autocomplete, interface inspection)
  "gllm_plugin/**/*.html",           # Example of a static filetype you may want to include
]
exclude = ["**/*"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
semver = "^3.0.4"
langchain = "^0.3.0"
langchain-core = ">=0.3.51"
gllm-core-binary = { version = "*" }
gllm-inference-binary = { version = "*" }
gllm-pipeline-binary = { version = "*" }
#TODO change back: bosa-core-binary = { version = "*" }
bosa-core = { git = "ssh://git@github.com/GDP-ADMIN/bosa.git", rev = "2e402082a9b9d59a408c03bfdd6820803e290b6b", subdirectory = "python/bosa-core" }

[tool.poetry.extras]
flair= ["flair"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.6.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.7"
mypy = "^1.11.2"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["B026", "C400", "C901", "E203", "E266", "F401", "F403", "F821"]
select = ["B", "B9", "C", "D", "E", "F", "I", "PL", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D107"]

[[tool.poetry.source]]
name = "gen-ai"
url = "https://asia-southeast2-python.pkg.dev/gdp-labs/gen-ai/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "gen-ai-publication"
url = "https://asia-southeast2-python.pkg.dev/gdp-labs/gen-ai/"
priority = "explicit"
