[tool.poetry]
name = "gllm-plugin"
# NOTE: CICD pipeline uses git tag name as package version. Read VERSIONING.md.
version = "0.0.0"
description = ""
authors = ["GenAI SDK Team <gat-sdk@gdplabs.id>"]
readme = "README.md"
packages = [{include = "gllm_plugin"}]
include = [
  "*.bin",                           # In case you have a Linux/MacOS CLI executable
  "*.exe",                           # In case you have a Windows CLI executable
  "*.pyd",                           # The compiled binary extension for Windows
  "*.so",                            # The compiled binary extension for Linux/MacOS
  "*.pyi",                           # Python interface stub files (aids autocomplete, interface inspection)
  "gllm_plugin/**/*.pyi",            # Python interface stub files (aids autocomplete, interface inspection)
  "gllm_plugin/**/*.html",           # Example of a static filetype you may want to include
]
exclude = ["**/*"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
poetry = "^2.1.3"

bosa-core-binary = "^0.2.3"
gllm-core-binary = "^0.3.0"
gllm-inference-binary = "^0.3.0"
gllm-pipeline-binary = "^0.3.0"

langchain = "^0.3.0"
langchain-core = "^0.3.0"
semver = "^3.0.4"

[tool.poetry.extras]
flair = ["flair"]

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
mypy = "^1.15.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = "^0.6.7"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["B026", "C400", "C901", "E203", "E266", "F401", "F403", "F821"]
select = ["B", "B9", "C", "D", "E", "F", "I", "PL", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.poetry.source]]
name = "gen-ai"
url = "https://asia-southeast2-python.pkg.dev/gdp-labs/gen-ai/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"
