[project]
name = "glchat-sdk"
# NOTE: CI/CD pipeline uses git tag name as package version. Read VERSIONING.md.
version = "0.0.0"
description = "GLChat Python Client"
readme = "README.md"
authors = [
    { name = "vincentchuardi", email = "91732545+vincentchuardi@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=glchat_sdk --cov-report=term-missing"

[tool.coverage.run]
source = ["glchat_sdk"]
omit = ["tests/*", "**/__init__.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
